<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Find a Fountain</string>
    <string name="app_name_short">Fountains</string>
    
    <!-- Login -->
    <string name="login_activity_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_welcome">Please enter your credentials!</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_facebook_text">Facebook Login</string>
    <string name="confirmation">OK</string>
    <string name="cancel">Cancel</string>
   
    <!-- Fountain Balloon -->
    <string name="fountain_rating_label">Rating</string>
    <string name="fountain_status_label">Status</string>
    <string name="fountain_report">Report Broken</string>
    <string name="fountain_flag">Flag</string>
    
    <!-- Menu Options -->
    <string name="menu_add_text">Add</string>
    <string name="menu_refresh_text">Refresh</string>
    <string name="menu_about_text">About</string>
    
    <!-- About -->
    <string name="about_author_name">Created by: Mr. Joel Kemp</string>
    <string name="about_email">findafountain@mrjoelkemp.com</string>
    <string name="about_website">www.mrjoelkemp.com</string>
    <string name="about_message">Lovingly made in NYC. Thanks!</string>
</resources>
