<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:orientation="vertical" 
	android:paddingBottom="35dip"
	android:paddingLeft="10dip" 
	android:minWidth="200dip" 
	android:id="@+id/balloon_main_layout"
	android:background="@drawable/facebook_balloon_overlay_unfocused" 
	android:paddingTop="0dip"
	android:paddingRight="10dip">
	
	<!-- The header container with FB logo and such  -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:src="@drawable/facebook_logo"
			android:id="@+id/facebook_logo" 
			android:layout_gravity="center"
			android:paddingLeft="0dip"
			android:paddingBottom="5dip" 
			android:paddingRight="0dip"
			android:paddingTop="10dip">
		</ImageView> 
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="10dip"
		    android:paddingTop="15dip"
			android:text="@string/login_facebook_text" 
			android:textSize="17dip"
			android:textStyle="bold"
			android:textColor = "@color/white"/>	
	</LinearLayout>
	
	<!-- The body container with edit texts and buttons -->
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="vertical" 
		android:layout_weight="1"
		android:paddingTop="10dip" 
		android:paddingBottom="5dip"
		android:paddingLeft="5dip"
		android:paddingRight="5dip"
		android:background="@color/white"
		android:id="@+id/balloon_inner_layout">
	
		<EditText android:id="@+id/login_username"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/login_hint_username"
			android:textColor="@color/facebook_blue"
			android:singleLine="true" />

		<EditText android:id="@+id/login_password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/login_hint_password"
			android:textColor="@color/facebook_blue"
			android:password = "true" 
			android:singleLine="true"/>
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation = "horizontal"
			android:background ="@color/white">			
			<Button
				android:id="@+id/login_OK_Button"
				android:layout_width ="fill_parent"
				android:layout_height="35dip"
				android:text="@string/confirmation"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/login_cancel_Button"
				android:layout_width ="fill_parent"
				android:layout_height="35dip"
				android:text="@string/cancel"
				android:layout_weight="1"/>
		</LinearLayout>	
	</LinearLayout>
</LinearLayout>