<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:orientation="horizontal" 
	android:paddingBottom="35dip"
	android:paddingLeft="10dip" 
	android:paddingTop="0dip"
	android:paddingRight="10dip"
	android:minWidth="200dip" 
	android:id="@+id/balloon_main_layout"
	android:background="@drawable/balloon_overlay_bg_selector">
	
	<LinearLayout 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="vertical" 
		android:layout_weight="1"
		android:paddingTop="10dip" 
		android:id="@+id/balloon_inner_layout">
		<TextView
			android:id="@+id/about_author" 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center_vertical|center_horizontal"
		    android:text="@string/about_author_name" 
		    android:textSize="15dip"
		    android:textScaleX = "1.2"
		    android:paddingLeft="20dip"
		    android:textColor = "@color/black"/>
	    <TextView
			android:id="@+id/about_website" 		    
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center_vertical|center_horizontal"
		    android:text="@string/about_website" 
		    android:paddingLeft="20dip"
		    android:textStyle="bold"
		    android:textColor = "@color/black"/>
	   <TextView
			android:id="@+id/about_message" 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center_vertical|center_horizontal"
		    android:paddingLeft="20dip"
		    android:text="@string/about_message" 
		    android:textColor = "@color/black"/>
	</LinearLayout>    
	<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:src="@drawable/balloon_overlay_close"
			android:id="@+id/close_img_button" 
			android:paddingLeft="10dip"
			android:paddingBottom="10dip" 
			android:paddingRight="1dip"
			android:paddingTop="8dip">
	</ImageView>   
</LinearLayout>